# terraform

./: .bazelignore  .bazelrc  .checkov.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .pr-bot-fleet-check.md  .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  .terraform-docs.yml  .tflint.hcl  .yamllint.yml  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CODE_STYLE.md  CONTRIBUTING.md  DEPENDENCY_MAP.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  OWNERS  OWNERS_ALIASES  README.md  backend.hcl  build.env
100-pve/: .terraform.lock.hcl  AGENTS.md  BUILD.bazel  OWNERS  README.md  checks.tf  firewall.tf  locals.tf  lxc_configs.tf  main.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfstate  variables.tf  versions.tf  vm_configs.tf
100-pve/config/: AGENTS.md  OWNERS  filebeat.yml
100-pve/envs/: OWNERS
100-pve/envs/prod/: AGENTS.md  BUILD.bazel  OWNERS  README.md  hosts.tf
100-pve/pve-hacks/: AGENTS.md  OWNERS
100-pve/terraform/: .terraform.lock.hcl  AGENTS.md  backup_jobs.tf  data.tf  firewall.tf  locals.tf  lxc_configs.tf  main.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfstate  versions.tf  vm_configs.tf
100-pve/terraform/configs/lxc-100-proxy/: cloud-init.yaml
100-pve/terraform/configs/lxc-101-gitlab-runner/: cloud-init.yaml
100-pve/terraform/configs/lxc-101-runner/: cloud-init.yaml  filebeat.yml
100-pve/terraform/configs/lxc-102-traefik/: cloud-init.yaml  mcphub.yml  registry.yml  traefik.yml
100-pve/terraform/configs/lxc-103-coredns/: Corefile  filebeat.yml  (+2 more)
101-runner/: AGENTS.md  BUILD.bazel  OWNERS  README.md  TEST_CHECKLIST.md
101-runner/config/: AGENTS.md  OWNERS  filebeat.yml
101-runner/scripts/: AGENTS.md  OWNERS  monitor.sh  recover-runner.sh  register-all-repos.go  register-all-repos.sh  register-repo.go  register-repo.sh  register-runners.sh  setup-gitlab-runner-with-cache.go  setup-gitlab-runner.go  setup-runner  setup-runner.go  setup-runner.sh  unregister-all.go  unregister-all.sh
101-runner/templates/: AGENTS.md  OWNERS  filebeat.yml.tftpl
107-supabase/: AGENTS.md  BUILD.bazel  OWNERS  README.md
107-supabase/templates/: .env.tftpl  AGENTS.md  OWNERS  docker-compose.yml.tftpl  filebeat.yml.tftpl  supabase.env.ctmpl
108-archon/: AGENTS.md  BUILD.bazel  DEPLOYMENT-DECISION.md  OWNERS  README.md  docker-compose.yml  sources.yml
108-archon/scripts/: AGENTS.md  inject-docs.go  sync-sources.go  sync-sources.sh
108-archon/templates/: .env.tftpl  AGENTS.md  OWNERS  archon.env.ctmpl  docker-compose.yml.tftpl  filebeat.yml.tftpl
108-archon/terraform/: .terraform.lock.hcl  AGENTS.md  BUILD.bazel  README.md  main.tf  outputs.tf  terraform.tfstate  variables.tf  versions.tf
112-mcphub/: AGENTS.md  BUILD.bazel  Dockerfile.dev-browser  Dockerfile.playwright  Dockerfile.proxmox  OWNERS  README.md  docker-compose-n8n.yml  mcp_servers.json  validate_mcps.py
112-mcphub/config/: .gitconfig  AGENTS.md  BUILD.bazel  entrypoint-patch.go  entrypoint-patch.sh  filebeat.yml  patch-placeholder.cjs  patch-placeholder.js  patch-sdk-schema.cjs
112-mcphub/n8n-workflows/: BUILD.bazel  OWNERS  glitchtip-sync.json
112-mcphub/n8n-workflows/.archive/: BUILD.bazel  OWNERS  elk-error-pipeline.json
112-mcphub/op-mcp-server/: AGENTS.md  BUILD.bazel  index.mjs  package-lock.json  package.json
112-mcphub/templates/: .env.tftpl  AGENTS.md  OWNERS  docker-compose-n8n.yml.tftpl  docker-compose-op-connect.yml.tftpl  docker-compose.yml.tftpl  filebeat.yml.tftpl  mcp_settings.json.tftpl
200-oc/: AGENTS.md  BUILD.bazel  OWNERS  README.md
200-oc/cloud-init/: OWNERS  oc-user-data.yaml
200-oc/config/: OWNERS  filebeat.yml
200-oc/config/systemd/: BUILD.bazel  OWNERS  opencode-anti.service  opencode-claude.service  opencode-cleanup.service  opencode-cleanup.timer  opencode-co.service  opencode.service  opencode.socket
200-oc/opencode/: .gitignore  AGENTS.md  BUILD.bazel  antigravity.json  dcp.jsonc  deploy.sh  opencode.jsonc  package-lock.json  package.json  supermemory.jsonc
200-oc/opencode/rules/: BUILD.bazel  cicd-bazel.md  large-refactor-modularization.md  session-init.md
200-oc/opencode/systemd/: BUILD.bazel  opencode-anti.service  opencode-claude.service  opencode-copilot.service
200-oc/opencode/templates/: BUILD.bazel  opencode-wrapper.sh.j2  opencode.service.j2
200-oc/opencode/variants/: BUILD.bazel
200-oc/scripts/: OWNERS  cleanup-logs.sh  install-service.sh  service-status.sh  uninstall-service.sh
300-cloudflare/: .gitignore  .terraform.lock.hcl  AGENTS.md  BUILD.bazel  OWNERS  README.md  access.tf  checks.tf  dns.tf  github-secrets.tf  identity-provider.tf  import.tf  locals.tf  logpush.tf  main.tf  onepassword.tf  outputs-homelab.tf  outputs-jclee.tf  outputs-synology.tf  outputs.tf  r2.tf  secrets-store.tf  terraform.tfstate  terraform.tfvars.example  tunnel.tf  validation.tf  variables.tf  vault-secrets.tf  versions.tf  waf.tf  workers.tf
300-cloudflare/docker/: OWNERS
300-cloudflare/docker/cloudflared/: BUILD.bazel  OWNERS  README.md  docker-compose.yml
300-cloudflare/docs/: OWNERS  requirements.md
300-cloudflare/inventory/: OWNERS  secrets.yaml
300-cloudflare/scripts/: AGENTS.md  OWNERS  audit.go  audit.sh  collect.go  collect.sh  deploy-worker.go  deploy-worker.sh  generate-bindings.go  generate-bindings.sh  sync.go  sync.sh
300-cloudflare/terraform/: .terraform.lock.hcl  AGENTS.md  access.tf  checks.tf  identity-provider.tf  locals.tf  logpush.tf  onepassword.tf  outputs-homelab.tf  outputs-synology.tf  outputs.tf  r2.tf  terraform.tfstate  terraform.tfvars.example  tunnel.tf  validation.tf  variables.tf  waf.tf  workers.tf
300-cloudflare/workers/: AGENTS.md  OWNERS
300-cloudflare/workers/issue-form/: AGENTS.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
300-cloudflare/workers/synology-proxy/: AGENTS.md  BUILD.bazel  package-lock.json  package.json  vitest.config.ts  wrangler.toml
modules/cloudflare/: AGENTS.md  BUILD.bazel  README.md  access.tf  dns.tf  example.tf.disabled  outputs.tf  r2.tf  terraform.tfvars.example  tunnel.tf  variables.tf  versions.tf  workers.tf
(+812 files in other folders)
