package(default_visibility = ["//visibility:public"])

filegroup(
    name = "config",
    srcs = glob(["config/**"], allow_empty = True),
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/**"], allow_empty = True),
)

filegroup(
    name = "pve_hacks",
    srcs = glob(["pve-hacks/**"], allow_empty = True),
)
