package(default_visibility = ["//visibility:public"])

filegroup(
    name = "config",
    srcs = glob(["config/**"]),
)

filegroup(
    name = "templates",
    srcs = glob(["templates/**"]),
)

filegroup(
    name = "all_files",
    srcs = [
        ":config",
        ":templates",
        "OWNERS",
    ],
)
