package(default_visibility = ["//visibility:public"])

filegroup(
    name = "templates",
    srcs = glob(["templates/**"]),
)

filegroup(
    name = "tf_configs",
    srcs = glob(["tf-configs/**"], allow_empty = True),
)

filegroup(
    name = "all_files",
    srcs = [
        ":templates",
        ":tf_configs",
        "docker-compose.yml",
        "OWNERS",
    ],
)
