package(default_visibility = ["//visibility:public"])

filegroup(
    name = "config",
    srcs = glob(["config/**"], allow_empty = True),
)

filegroup(
    name = "templates",
    srcs = glob(["templates/**"]),
)

filegroup(
    name = "dockerfiles",
    srcs = [
        "Dockerfile.playwright",
        "Dockerfile.proxmox",
    ],
)

filegroup(
    name = "compose",
    srcs = ["docker-compose-n8n.yml"],
)

filegroup(
    name = "n8n_workflows",
    srcs = glob(["n8n-workflows/**"], allow_empty = True),
)

filegroup(
    name = "tf_configs",
    srcs = glob(["tf-configs/**"], allow_empty = True),
)
