package(default_visibility = ["//visibility:public"])

filegroup(
    name = "config",
    srcs = glob(["config/**"], allow_empty = True),
)

filegroup(
    name = "cleanup_logs",
    srcs = ["//200-oc/scripts:files"],
)

filegroup(
    name = "scripts",
    srcs = glob(["scripts/**"], allow_empty = True),
)
