load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "model_id_lib",
    srcs = ["gen/model_id.py"],
)

py_library(
    name = "config_lib",
    srcs = ["gen/config.py"],
    deps = [":model_id_lib"],
)

py_binary(
    name = "generate",
    srcs = ["gen/generate.py"],
    data = glob(["templates/**"]),
    deps = [
        ":config_lib",
        ":model_id_lib",
    ],
)

py_test(
    name = "model_id_test",
    srcs = ["gen/model_id_test.py"],
    deps = [":model_id_lib"],
)

sh_binary(
    name = "opencode-sync",
    srcs = ["bin/opencode-sync"],
    data = glob(["generated/**"]),
)
