package(default_visibility = ["//visibility:public"])

filegroup(
    name = "gen",
    srcs = glob(["gen/**"]),
)

filegroup(
    name = "templates",
    srcs = glob(["templates/**"]),
)

filegroup(
    name = "generated",
    srcs = glob(["generated/**"]),
)

filegroup(
    name = "rules",
    srcs = glob(["rules/**"]),
)

filegroup(
    name = "variants",
    srcs = glob(["variants/**"]),
)

filegroup(
    name = "configs",
    srcs = [
        "antigravity.json",
        "dcp.jsonc",
        "opencode.jsonc",
        "supermemory.jsonc",
    ],
)

filegroup(
    name = "bin",
    srcs = glob(["bin/*"]),
)

filegroup(
    name = "all_files",
    srcs = [
        ":bin",
        ":configs",
        ":gen",
        ":generated",
        ":rules",
        ":templates",
        ":variants",
        "OWNERS",
    ],
)
