package(default_visibility = ["//visibility:public"])

filegroup(
    name = "gen",
    srcs = ["//200-oc/opencode/gen:sources"],
)

filegroup(
    name = "generated",
    srcs = glob(["generated/**"]),
)

filegroup(
    name = "rules",
    srcs = ["//200-oc/opencode/rules:rules"],
)

filegroup(
    name = "variants",
    srcs = ["//200-oc/opencode/variants:all_variants"],
)

filegroup(
    name = "configs",
    srcs = [
        "antigravity.json",
        "opencode.jsonc",
        "supermemory.jsonc",
    ],
)

filegroup(
    name = "bin",
    srcs = ["//200-oc/opencode/bin:scripts"],
)

filegroup(
    name = "all_files",
    srcs = [
        ":bin",
        ":configs",
        ":gen",
        ":generated",
        ":rules",
        ":variants",
        "OWNERS",
    ],
)
